--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <script async src="script.js"></script>
 </head>
 <body>
+    <label for="row">Row:</label>
+    <input type="number" name="row" id="row">
 
+    <label for="column">Column:</label>
+    <input type="number" name="column" id="column">
+
+    <button id="btn-go">Go</button>
 </body>
 </html>
