--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tic Tac Toe</title>
 
     <link rel="stylesheet" href="style.css">
-    <script async src="script.js"></script>
+    <script defer src="script.js"></script>
 
     <!-- Font Import -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
