Feature: turn indication text and win or lose indication text functionalities are added

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div data-row="2" data-column="2" class="game-board__cell"></div>
     </main>
     <section class="indication-texts">
-        <h2 class="turn">Turn: User</h2>
-        <h1 class="win-or-lose">You Win!</h1>
+        <h2 class="turn"></h2>
+        <h1 class="win-or-lose"></h1>
     </section>
 </body>
 </html>
