Feature: game restart function finished

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
     </main>
     <section class="indication-texts">
         <h2 class="turn"></h2>
-        <h1 class="win-or-lose"></h1>
+        <div class="result">
+            <h1 class="win-or-lose"></h1>
+            <button class="btn btn--restart">
+                <img src="./restart.png" alt="restart icon">
+            </button>
+        </div>
     </section>
 </body>
 </html>
